force-app/main/default/objects/Tier_Upgrade_Target_Member__c/Tier_Upgrade_Target_Member__c.object-meta.xml
<CustomObject>
    <label>Tier Upgrade Target Member</label>
    <nameField>
        <label>Tier Upgrade Target Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tier Upgrade Target Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>