force-app/main/default/objects/Tier_Upgrade_Target_Member__c/fields/Current_QP_balance__c.field-meta.xml
<CustomField>
    <fullName>Current_QP_balance__c</fullName>
    <label>Current QP balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>