force-app/main/default/objects/Tier_Upgrade_Target_Member__c/fields/Current_Tier__c.field-meta.xml
<CustomField>
    <fullName>Current_Tier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Tier</label>
    <referenceTo>LoyaltyTier</referenceTo>
    <relationshipLabel>Tier Upgrade Target Members</relationshipLabel>
    <relationshipName>Tier_Upgrade_Target_Members</relationshipName>
    <type>Lookup</type>
</CustomField>