force-app/main/default/objects/Tier_Upgrade_Target_Member__c/fields/Last_Run_on__c.field-meta.xml
<CustomField>
    <fullName>Last_Run_on__c</fullName>
    <label>Last Run on</label>
    <type>DateTime</type>
</CustomField>