force-app/main/default/objects/Tier_Upgrade_Target_Member__c/fields/Loyalty_Currency__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Currency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loyalty Currency</label>
    <referenceTo>LoyaltyProgramCurrency</referenceTo>
    <relationshipLabel>Tier Upgrade Target Members</relationshipLabel>
    <relationshipName>Tier_Upgrade_Target_Members</relationshipName>
    <type>Lookup</type>
</CustomField>