force-app/main/default/objects/Tier_Upgrade_Target_Member__c/fields/Loyalty_Program_Member__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Program_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loyalty Program Member</label>
    <referenceTo>LoyaltyProgramMember</referenceTo>
    <relationshipLabel>Tier Upgrade Target Members</relationshipLabel>
    <relationshipName>Tier_Upgrade_Target_Members</relationshipName>
    <type>Lookup</type>
</CustomField>